@@ -673,8 +673,7 @@ genrtl_case_label (case_label)
   if (cleanup)
     {
       static int explained = 0;
-      warning_with_decl (TREE_PURPOSE (cleanup), 
-			 "destructor needed for `%#D'");
+      warning ("destructor needed for `%#D'", TREE_PURPOSE (cleanup));
       warning ("where case label appears here");
       if (!explained)
 	{
