@@ -1,3 +1,9 @@
+2002-08-14  Gabriel Dos Reis  <gdr@nerim.net>
+
+	Fix PR/7566
+	* c-semantics.c (genrtl_case_label): Don't (mis)use
+	warning_with_decl.
+
 2004-07-25  David Edelsohn  <edelsohn@gnu.org>
 
 	PR target/16239
